--- a/leili.bib
+++ b/leili.bib
@@ -4,7 +4,7 @@
   title     = {How Vocabulary Sharing Facilitates Multilingualism in LLaMA?},
   year      = {2024},
   month     = aug,
-  abstract  = {Large Language Models (LLMs), often show strong performance on English tasks, while ex- hibiting limitations on other languages. What is an LLM’s multilingual capability when it is trained only on certain languages? The under- lying mechanism remains unclear. This study endeavors to examine the multilingual capabil- ity of LLMs from the vocabulary sharing per- spective by conducting an exhaustive analysis across 101 languages. Through the investiga- tion of the performance gap before and after embedding fine-tuning, we discovered four dis- tinct quadrants. By delving into each quadrant we provide actionable and efficient guidelines for tuning these languages. Extensive experi- ments reveal that existing LLMs possess mul- tilingual capabilities that surpass our expecta- tions, and we can significantly improve the mul- tilingual performance of LLMs based on these attributes of each quadrant},
+  abstract  = {Large Language Models (LLMs), often show strong performance on English tasks, while exhibiting limitations on other languages. What is an LLM’s multilingual capability when it is trained only on certain languages? The underlying mechanism remains unclear. This study endeavors to examine the multilingual capability of LLMs from the vocabulary sharing perspective by conducting an exhaustive analysis across 101 languages. Through the investigation of the performance gap before and after embedding fine-tuning, we discovered four distinct quadrants. By delving into each quadrant we provide actionable and efficient guidelines for tuning these languages. Extensive experiments reveal that existing LLMs possess multilingual capabilities that surpass our expectations, and we can significantly improve the multilingual performance of LLMs based on these attributes of each quadrant},
   eprint    = {https://arxiv.org/abs/2311.09071},
 }
 
@@ -14,7 +14,7 @@
   title     = {Hire a Linguist!: Learning Endangered Languages in LLMs with In-Context Linguistic Descriptions},
   year      = {2024},
   month     = aug,
-  abstract  = {How can large language models (LLMs) process and translate endangered languages? Many languages lack a large corpus to train a decent LLM; therefore existing LLMs rarely perform well in unseen, endangered languages. On the contrary, we observe that 2000 endan- gered languages, though without a large corpus, have a grammar book or a dictionary. We pro- pose LINGOLLM, a training-free approach to enable an LLM to process unseen languages that hardly occur in its pre-training. Our key insight is to demonstrate linguistic knowledge of an unseen language in an LLM’s prompt, including a dictionary, a grammar book, and morphologically analyzed input text. We im- plement LINGOLLM on top of two models, GPT-4 and Mixtral, and evaluate their perfor- mance on 5 tasks across 8 endangered or low- resource languages. Our results show that LIN- GOLLM elevates translation capability from GPT-4’s 0 to 10.5 BLEU for 10 language di- rections. Our findings demonstrate the tremen- dous value of linguistic knowledge in the age of LLMs for endangered languages. Our data, code, and model generations can be found at https://github.com/LeiLiLab/LingoLLM.},
+  abstract  = {How can large language models (LLMs) process and translate endangered languages? Many languages lack a large corpus to train a decent LLM; therefore existing LLMs rarely perform well in unseen, endangered languages. On the contrary, we observe that 2000 endangered languages, though without a large corpus, have a grammar book or a dictionary. We propose LINGOLLM, a training-free approach to enable an LLM to process unseen languages that hardly occur in its pre-training. Our key insight is to demonstrate linguistic knowledge of an unseen language in an LLM’s prompt, including a dictionary, a grammar book, and morphologically analyzed input text. We implement LINGOLLM on top of two models, GPT-4 and Mixtral, and evaluate their performance on 5 tasks across 8 endangered or low-resource languages. Our results show that LINGOLLM elevates translation capability from GPT-4’s 0 to 10.5 BLEU for 10 language directions. Our findings demonstrate the tremendous value of linguistic knowledge in the age of LLMs for endangered languages. Our data, code, and model generations can be found at https://github.com/LeiLiLab/LingoLLM.},
   code      = {https://github.com/LeiLiLab/LingoLLM},
   eprint    = {https://arxiv.org/abs/2402.18025},
 }
@@ -26,7 +26,7 @@
   year      = {2024},
   month     = aug,
   note      = {2024},
-  abstract  = {Recent studies show that large language models (LLMs) improve their performance through self-feedback on certain tasks while degrade on others. We discovered that such a contrary is due to LLM’s bias in evaluating their own output. In this paper, we formally define LLM’s self-bias – the tendency to favor its own generation – using two statistics. We analyze six LLMs (GPT-4, GPT-3.5, Gemini, LLaMA2, Mixtral and DeepSeek) on translation, constrained text generation, and mathematical reasoning tasks. We find that self-bias is prevalent in all examined LLMs across multiple languages and tasks. Our analysis reveals that while the self-refine pipeline improves the fluency and understandability of model out- puts, it further amplifies self-bias. To mitigate such biases, we discover that larger model size and external feedback with accurate assessment can significantly reduce bias in the self-refine pipeline, leading to actual performance improvement in downstream tasks. The code and data are released at https://github. com/xu1998hz/llm_self_bias.},
+  abstract  = {Recent studies show that large language models (LLMs) improve their performance through self-feedback on certain tasks while degrade on others. We discovered that such a contrary is due to LLM’s bias in evaluating their own output. In this paper, we formally define LLM’s self-bias -- the tendency to favor its own generation -- using two statistics. We analyze six LLMs (GPT-4, GPT-3.5, Gemini, LLaMA2, Mixtral and DeepSeek) on translation, constrained text generation, and mathematical reasoning tasks. We find that self-bias is prevalent in all examined LLMs across multiple languages and tasks. Our analysis reveals that while the self-refine pipeline improves the fluency and understandability of model outputs, it further amplifies self-bias. To mitigate such biases, we discover that larger model size and external feedback with accurate assessment can significantly reduce bias in the self-refine pipeline, leading to actual performance improvement in downstream tasks. The code and data are released at https://github. com/xu1998hz/llm_self_bias.},
   code      = {https://github. com/xu1998hz/llm_self_bias},
   eprint    = {https://arxiv.org/abs/2402.11436},
 }
@@ -37,7 +37,7 @@
   title     = {DE-COP: Detecting Copyrighted Content in Language Models Training Data},
   year      = {2024},
   month     = jul,
-  abstract  = {How can we detect if copyrighted content was used in the training process of a language model, considering that the training data is typically undisclosed? We are motivated by the premise that a language model is likely to identify ver- batim excerpts from its training text. We propose DE-COP, a method to determine whether a piece of copyrighted content was included in training. DE-COP’s core approach is to probe an LLM with multiple-choice questions, whose options include both verbatim text and their paraphrases. We construct BookTection, a benchmark with excerpts from 165 books published prior and subsequent to a model’s training cutoff, along with their paraphrases. Our experiments show that DE-COP surpasses the prior best method by 9.6% in detection performance (AUC) on models with logits available. Moreover, DE-COP also achieves an average accuracy of 72% for detecting suspect books on fully black-box models where prior methods give approximately 4% accuracy. The code and datasets are available at https: //github.com/LeiLiLab/DE-COP.},
+  abstract  = {How can we detect if copyrighted content was used in the training process of a language model, considering that the training data is typically undisclosed? We are motivated by the premise that a language model is likely to identify verbatim excerpts from its training text. We propose DE-COP, a method to determine whether a piece of copyrighted content was included in training. DE-COP’s core approach is to probe an LLM with multiple-choice questions, whose options include both verbatim text and their paraphrases. We construct BookTection, a benchmark with excerpts from 165 books published prior and subsequent to a model’s training cutoff, along with their paraphrases. Our experiments show that DE-COP surpasses the prior best method by 9.6% in detection performance (AUC) on models with logits available. Moreover, DE-COP also achieves an average accuracy of 72% for detecting suspect books on fully black-box models where prior methods give approximately 4% accuracy. The code and datasets are available at https: //github.com/LeiLiLab/DE-COP.},
   code      = {https: //github.com/LeiLiLab/DE-COP},
   eprint    = {https://arxiv.org/abs/2402.09910},
 }
