--- a/leili.bib
+++ b/leili.bib
@@ -1,3 +1,14 @@
+@InProceedings{wang2024global,
+  author    = {Danqing Wang and Antonis Antoniades and Kha-Dinh Luong and Edwin Zhang and Mert Kosan and Jiachen Li and Ambuj Singh and William Yang Wang and Lei Li},
+  booktitle = {the 30th SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)},
+  title     = {Global Human-guided Counterfactual Explanations for Molecular Properties via Reinforcement Learning},
+  year      = {2024},
+  month     = aug,
+  abstract  = {Counterfactual explanations of Graph Neural Networks (GNNs) offer a powerful way to understand data that can naturally be represented by a graph structure. Furthermore, in many domains, it is highly desirable to derive data-driven global explanations or rules that can better explain the high-level properties of the models and data in question. However, evaluating global counterfactual explanations is hard in real-world datasets due to a lack of human-annotated ground truth, which limits their use in areas like molecular sciences. Additionally, the increasing scale of these datasets provides a challenge for random search-based methods. In this paper, we develop a novel global explanation model RLHEX for molecular property prediction. It aligns the counterfactual explanations with human-defined principles, making the explanations more interpretable and easy for experts to evaluate. RLHEX includes a VAE-based graph generator to generate global explanations and an adapter to adjust the latent representation space to human-defined principles. Optimized by Proximal Policy Optimization (PPO), the global explanations produced by RLHEX cover 4.12% more input graphs and reduce the distance between the counterfactual explanation set and the input set by 0.47% on average across three molecular datasets. RLHEX provides a flexible framework to incorporate different human-designed principles into the counterfactual explanation generation process, aligning these explanations with domain expertise.},
+  code      = {https://github.com/dqwang122/RLHEX},
+  eprint    = {https://arxiv.org/abs/2406.13869},
+}
+
 @InProceedings{yuan2024how,
   author    = {Fei Yuan and Shuai Yuan and Zhiyong Wu and Lei Li},
   booktitle = {the 62nd Annual Meeting of the Association for Computational Linguistics - Findings (ACL-Findings)},
@@ -292,7 +303,7 @@ focus on peptide sequence attributes and do not consider crucial structure infor
 }
 
 @InProceedings{yuan2023lego,
-  author    = {Fei Yuan and Yinquan Lu and Wenhao Zhu and Lingpeng Kong and Lei Li and Jingjing Xu},
+  author    = {Fei Yuan and Yinquan Lu and Wenhao Zhu and Lingpeng Kong and Lei Li and Yu Qiao and Jingjing Xu},
   booktitle = {the 61st Annual Meeting of the Association for Computational Linguistics - Findings (ACL-Findings)},
   title     = {{Lego-MT}: Learning Detachable Models for Massively Multilingual Machine Translation},
   year      = {2023},
